updated theme metas

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,9 @@
 /*!
 Theme Name: Humescores
-Theme URI: http://underscores.me/
-Author: Morten Rand-Hendriksen
-Author URI: https://mor10.com/courses
-Description: An awsome new Humescores-based theme!
+Theme URI: http://github.com/stacymoorhead/humescores
+Author: Stacy Moorhead
+Author URI: http://www.stacylauren.com
+Description: Test theme for Lynda.com course weeeeeee!
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
