added styles to header

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -3,6 +3,12 @@
 --------------------------------------------------------------*/
 @import "../layout/global";
 
+
+/*--------------------------------------------------------------
+## Header
+--------------------------------------------------------------*/
+@import "header/header";
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
