--- a/style.css
+++ b/style.css
@@ -839,6 +839,9 @@ a:hover, a:active {
 	}
 	.site-branding {
 		width: 35%;
+		-webkit-box-flex: 1;
+		    -ms-flex: 1 0 auto;
+		        flex: 1 0 auto;
 	}
 	.site-navigation {
 		width: 55%;
